# fastapi-demo

./: .coveragerc  .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
api/v1/: __init__.py
api/v1/hello_world/: router.py  schemas.py
core/: config.py
models/: category.py  school.py
