[tool.poetry]
name = "prj-techs-task"
version = "0.1.0"
description = ""
authors = ["Hikmat Samadov <s3m3dov@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.2.7"
fastapi = "^0.81.0"
SQLAlchemy = "^1.4.40"
redis = "^4.3.4"
pydantic = "^1.10.0"
plotly = "^5.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
